test/type_inference/positive/arg_inference3.impala
fn f(g: fn[A](A)->A) -> int32 {
    g(5)
}

fn main() -> int32 {
    f(|x| x)
}

