test/type_inference/negative/map2.impala
struct ListElem[A] {
    val: A,
    next: ~ListElem[A]
}

fn map[B, C](f: fn(B)->C, l: &ListElem[B]) -> &ListElem[C] {
    if (l == null) {
        null
    } else {
        ListElem[C] { val: f(l.val), next: map(f, l.next) }
    }
}

fn main() -> &ListElem[int32] {
    // here we do not know the first type argument B of map
    map(|x| x, null)
}
